# bip3x

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  build.sh  conanfile.py  deploy.py  dockerpack.yml  publish_local.sh  pvs.cfg  version
.circleci/: config.yml  deploy.sh  deploy_win.bat  package.sh  setup.sh  test.sh
.github/: CODEOWNERS
.github/actions/build-cmake-target/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-conan/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build_conan.yml  check_pr.yml
cfg/: add_repo.sh  bip39.pc.in  bip39_core.h.in  bip3x-config.cmake.in  bip3x.pc.in  bip3x_config.in.h  bip3x_jni.pc.in  cbip39.pc.in  cbip39_config.h.in  cbip39_config.in.h  package_make.sh  package_upload.sh  version.info.in
cmake/: AndroidDetermine.cmake  ConanBuild.cmake  ConanInit.cmake  FindLinuxPlatform.cmake  FindSSE.cmake  PVS-Studio.cmake  ar_merge.cmake  compiler_flags.cmake  conan.cmake  conan_fallback.cmake  conan_provider.cmake  configure.cmake  mingw-w64.cmake  target_c.cmake  target_jni.cmake  target_test.cmake
example/: example.cpp
include/bip39/: Bip39Mnemonic.h  HDKeyEncoder.h  uint256.h  uint256_t.hpp  utils.h  wordlist.h
include/bip39/crypto/: hmac_sha256.h  hmac_sha512.h  win_endian.h
include/bip3x/: Bip39Mnemonic.h  HDKeyEncoder.h  bip39.h  bip3x_crypto.h  bip3x_hdkey_encoder.h  bip3x_mnemonic.h  mnemonic.h  uint256.h  utils.h  wordlist.h
include/bip3x/crypto/: address.h  base58.h  bignum.h  bip39.h  blake256.h  ecdsa.h  hasher.h  hmac.h  hmac_sha256.h  hmac_sha512.h  memzero.h  packed_attr.h  pbkdf2.hpp  rand.h  rfc6979.h  ripemd160.h  secp256k1.h  sha2.hpp  sha256.h  sha3.h  sha512.h  win_endian.h
include/bip3x/details/: PCGRand.hpp  uint256_t.hpp  utils.h
include/cbip3x/: cbip3x.h  cbip3x_hdkey_encoder.h
include/minter/bip39/: Bip39Mnemonic.h  HDKeyEncoder.h  bip39.h  internal.h  mnemonic.h  uint256.h  uint256_t.hpp  utils.h  wordlist.h
include/minter/crypto/: address.h  base58.h  bignum.h  bip39.h  blake256.h  blake2b.h  blake2s.h  ecdsa.h  groestl.h  hasher.h  hmac.h  memzero.h  packed_attr.h  packed_attr_end.h  pbkdf2.hpp  rand.h  rc4.h  rfc6979.h  ripemd160.h  script.h  secp256k1.h  sha2.hpp  sha3.h
include/toolbox/: collections.h  data.hpp  io.h  log.h  strings.hpp  term.h  time_profiler.h  toolbox_config.h
include/toolbox/data/: base64.h  basic_data.h  bytes_array.h  bytes_buffer.h  bytes_data.h  literals.h  transformers.h  utils.h
include/toolbox/strings/: decimal_formatter.h  regex.h
include_cfg/: bip39_core.h.in  cbip39_config.h.in
libs/trezor-crypto/: CMakeLists.txt  Makefile  base32.cpp  base32.h  base58.cpp  base58.h  bignum.cpp  bignum.h  bip32.cpp  bip32.h  bip39.cpp  blake256.cpp  blake2_common.h  blake2b.cpp  blake2s.cpp  cash_addr.cpp  cash_addr.h  ecdsa.cpp  groestl.cpp  groestl_internal.h  hasher.cpp  hasher.h  hmac.cpp  hmac.h  memzero.cpp  memzero.h  nem.cpp  nem.h  nist256p1.h  pbkdf2.cpp  pbkdf2.hpp  rand.cpp  rand.h  rc4.h  rfc6979.cpp  ripemd160.cpp  script.cpp  secp256k1.cpp  segwit_addr.cpp  segwit_addr.h  (+4 more)
modules/: ConanBuild.cmake  ConanInit.cmake  conan_fallback.cmake  conan_provider.cmake  package.cmake  target_c.cmake  target_jni.cmake
packaging/: build_all.sh  build_stretch.docker  init_build.sh
src/: bip39.c  bip39.cpp  bip39.h  bip39_core.h  bit39_core.h  config.h  hmac.c  hmac.inl  internal.c  internal.cpp  internal.h  main.cpp  mnemonic.c  mnemonic.cpp  uint256.cpp  wally_crypto.h  wordlist.c  wordlist.cpp  wordlist.h
src/bindings/: bip39.cpp  bip39.h  bip39_config.h.in  cbip39.cpp  cbip39.h  cbip39_config.h.in  cbip39_hdkey_encoder.cpp  cbip39_hdkey_encoder.h  hdkey_encoder.cpp  hdkey_encoder.h
src/bip3x/: bip3x_crypto.cpp  bip3x_hdkey_encoder.cpp  bip3x_mnemonic.cpp  utils.cpp
src/cbip3x/: cbip3x.cpp  cbip3x_hdkey_encoder.cpp
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  sha256.cpp  sha256.h  sha512.cpp  win_endian.cpp  win_endian.h
src/data/wordlists/: chinese_simplified.c  chinese_simplified.cpp  chinese_traditional.c  chinese_traditional.cpp  english.c  english.cpp  french.c  french.cpp  italian.c  italian.cpp  spanish.c  (+3 more)
src/details/: bip39.cpp  bip39.h  mnemonic.cpp  mnemonic.h  wordlist.cpp  wordlist.h
src/golang/: bip39.cpp  bip39.h  bip39_config.h  bip39_config.h.in  hdkey_encoder.cpp  hdkey_encoder.h
src/java/: NativeBip39.cpp  NativeBip39.h  com_edwardstock_bip3x_NativeBip39.cpp  com_edwardstock_bip3x_NativeBip39.h  com_edwardstock_bip3x_NativeHDKeyEncoder.cpp  com_edwardstock_bip3x_NativeHDKeyEncoder.h  network_minter_core_bip39_NativeBip39.cpp  network_minter_core_bip39_NativeBip39.h  network_minter_core_bip39_NativeHDKeyEncoder.cpp  network_minter_core_bip39_NativeHDKeyEncoder.h  network_minter_mintercore_bip39_NativeBip39.cpp  network_minter_mintercore_bip39_NativeBip39.h  network_minter_mintercore_bip39_NativeHDKeyEncoder.cpp  network_minter_mintercore_bip39_NativeHDKeyEncoder.h  nobject.cpp  nobject.h
src/jni/: com_edwardstock_bip3x_BIP3X.cpp  com_edwardstock_bip3x_BIP3X.h  com_edwardstock_bip3x_HDKeyEncoder.cpp  com_edwardstock_bip3x_HDKeyEncoder.h  com_edwardstock_bip3x_NativeBip39.cpp  com_edwardstock_bip3x_NativeBip39.h  com_edwardstock_bip3x_NativeHDKeyEncoder.cpp  com_edwardstock_bip3x_NativeHDKeyEncoder.h  nobject.cpp  nobject.h
src/minter/: Bip39Mnemonic.cpp  Bip39Mnemonic.h  HDKeyEncoder.cpp  HDKeyEncoder.h  PCGRand.hpp  uint256_t.hpp  utils.cpp  utils.h
src/trezor-crypto/: .gitignore  CMakeLists.txt  Makefile  address.cpp  base58.cpp  bignum.cpp  bip39.cpp  blake256.cpp  blake2b.cpp  blake2s.cpp  curves.cpp  ecdsa.cpp  groestl.cpp  hasher.cpp  hmac.cpp  pbkdf2.cpp  rand.cpp  rc4.cpp  rfc6979.cpp  ripemd160.cpp  script.cpp  secp256k1.cpp  sha2.cpp  sha3.cpp
tests/: issue_11_test.cpp  main.cpp  minter_c_mnemonic_test.cpp  minter_cc_test.cpp  minter_cxx_test.cpp  minter_mnemonic_test.cpp
tools/: _shared.sh  build-all.sh  build-openssl4android.sh
(+77 files in other folders)
